--- a/app.html
+++ b/app.html
@@ -270,7 +270,7 @@
             <div class="pp-logo" aria-hidden="true">PP</div>
             <div>
               <div class="pp-title">ProfitPilot</div>
-              <div class="pp-sub">Independent tool by Ukwebtools</div>
+              <div class="pp-sub">Independent tool by UKwebtools</div>
             </div>
           </div>
 
@@ -290,7 +290,7 @@
         "@context":"https://schema.org",
         "@type":"BreadcrumbList",
         "itemListElement":[
-          {"@type":"ListItem","position":1,"name":"Ukwebtools","item":"https://ukwebtools.com/"},
+          {"@type":"ListItem","position":1,"name":"UKwebtools","item":"https://ukwebtools.com/"},
           {"@type":"ListItem","position":2,"name":"ProfitPilot","item":"https://profitpilot.ukwebtools.com/index.html"},
           {"@type":"ListItem","position":3,"name":"App","item":"https://profitpilot.ukwebtools.com/app.html"}
         ]
@@ -642,7 +642,7 @@
           <div class="toast" id="reviewStatus">—</div>
         </div>
 
-        <div style="margin-top:14px" class="small">© <span id="yr"></span> Ukwebtools • ProfitPilot</div>
+        <div style="margin-top:14px" class="small">© <span id="yr"></span> UKwebtools • ProfitPilot</div>
       </div>
     </div>
   </main>
@@ -672,8 +672,8 @@
       </div>
 
       <div class="pp-footbottom">
-        <div>© <span id="yr2"></span> Ukwebtools • ProfitPilot</div>
-        <div><a href="https://ukwebtools.com/" rel="nofollow">Ukwebtools</a></div>
+        <div>© <span id="yr2"></span> UKwebtools • ProfitPilot</div>
+        <div><a href="https://ukwebtools.com/" rel="nofollow">UKwebtools</a></div>
       </div>
     </div>
   </footer>
