--- a/help.html
+++ b/help.html
@@ -219,7 +219,7 @@
     "@context":"https://schema.org",
     "@type":"BreadcrumbList",
     "itemListElement":[
-      {"@type":"ListItem","position":1,"name":"Ukwebtools","item":"https://ukwebtools.com/"},
+      {"@type":"ListItem","position":1,"name":"UKwebtools","item":"https://ukwebtools.com/"},
       {"@type":"ListItem","position":2,"name":"ProfitPilot","item":"https://profitpilot.ukwebtools.com/"},
       {"@type":"ListItem","position":3,"name":"How to use","item":"https://profitpilot.ukwebtools.com/help.html"}
     ]
@@ -244,7 +244,7 @@
         </div>
 
         <div class="right">
-          <a class="btn ghost" href="https://ukwebtools.com/" rel="nofollow">← Ukwebtools</a>
+          <a class="btn ghost" href="https://ukwebtools.com/" rel="nofollow">← UKwebtools</a>
           <a class="btn" href="index.html">Home</a>
           <a class="btn" href="reviews.html">Reviews</a>
           <a class="btn" href="privacy.html">Privacy</a>
@@ -258,7 +258,7 @@
     </header>
 
     <div class="crumbs" aria-label="Breadcrumb">
-      <a href="https://ukwebtools.com/">Ukwebtools</a>
+      <a href="https://ukwebtools.com/">UKwebtools</a>
       <span class="sep">›</span>
       <a href="index.html">ProfitPilot</a>
       <span class="sep">›</span>
@@ -465,7 +465,7 @@
       <div class="hr"></div>
       <div><b>Independent tool:</b> ProfitPilot is not affiliated with or endorsed by any marketplace, platform, or payment provider.</div>
       <div><b>Estimates only:</b> outputs depend on your inputs and assumptions; no profit guarantees. Not financial/legal/tax advice.</div>
-      <div style="margin-top:6px">© <span id="yr"></span> Ukwebtools • ProfitPilot</div>
+      <div style="margin-top:6px">© <span id="yr"></span> UKwebtools • ProfitPilot</div>
     </footer>
   </div>
 
