--- a/index.html
+++ b/index.html
@@ -296,12 +296,12 @@
             <div class="pp-logo" aria-hidden="true">PP</div>
             <div>
               <div class="pp-title">ProfitPilot</div>
-              <div class="pp-sub">Independent tool by Ukwebtools</div>
+              <div class="pp-sub">Independent tool by UKwebtools</div>
             </div>
           </div>
 
           <nav class="pp-nav" aria-label="Main">
-            <a class="pp-btn ghost" href="https://ukwebtools.com/" rel="nofollow">← Ukwebtools</a>
+            <a class="pp-btn ghost" href="https://ukwebtools.com/" rel="nofollow">← UKwebtools</a>
 
             <a class="pp-btn" href="help.html">How to use</a>
 
@@ -318,7 +318,7 @@
         "@context":"https://schema.org",
         "@type":"BreadcrumbList",
         "itemListElement":[
-          {"@type":"ListItem","position":1,"name":"Ukwebtools","item":"https://ukwebtools.com/"},
+          {"@type":"ListItem","position":1,"name":"UKwebtools","item":"https://ukwebtools.com/"},
           {"@type":"ListItem","position":2,"name":"ProfitPilot","item":"https://profitpilot.ukwebtools.com/index.html"}
         ]
       }
@@ -502,8 +502,8 @@
         </div>
 
         <div class="pp-footbottom">
-          <div>© <span id="yr"></span> Ukwebtools • ProfitPilot</div>
-          <div><a href="https://ukwebtools.com/" rel="nofollow">Ukwebtools</a></div>
+          <div>© <span id="yr"></span> UKwebtools • ProfitPilot</div>
+          <div><a href="https://ukwebtools.com/" rel="nofollow">UKwebtools</a></div>
         </div>
       </div>
     </div>
