--- a/login.html
+++ b/login.html
@@ -174,7 +174,7 @@
   <div class="pp-navwrap" role="navigation" aria-label="Primary">
     <div class="pp-nav">
       <div class="pp-left">
-        <a class="pp-btn" href="https://ukwebtools.com/" data-nav="ukwebtools">← Ukwebtools</a>
+        <a class="pp-btn" href="https://ukwebtools.com/" data-nav="ukwebtools">← UKwebtools</a>
         <a class="pp-btn" href="index.html" data-nav="home">Home</a>
         <a class="pp-btn" href="pricing.html" data-nav="pricing">Pricing</a>
         <a class="pp-btn" href="reviews.html" data-nav="reviews">Reviews</a>
@@ -198,7 +198,7 @@
     </div>
 
     <div class="pp-crumbs" aria-label="Breadcrumb">
-      <a href="https://ukwebtools.com/">Ukwebtools</a>
+      <a href="https://ukwebtools.com/">UKwebtools</a>
       <span class="pp-sep">›</span>
       <a href="index.html">ProfitPilot</a>
       <span class="pp-sep">›</span>
@@ -259,7 +259,7 @@
       "@context":"https://schema.org",
       "@type":"BreadcrumbList",
       "itemListElement":[
-        {"@type":"ListItem","position":1,"name":"Ukwebtools","item":"https://ukwebtools.com/"},
+        {"@type":"ListItem","position":1,"name":"UKwebtools","item":"https://ukwebtools.com/"},
         {"@type":"ListItem","position":2,"name":"ProfitPilot","item": base + "index.html"},
         {"@type":"ListItem","position":3,"name":"Log in","item": base + "login.html"}
       ]
