--- a/privacy.html
+++ b/privacy.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Privacy Policy — ProfitPilot</title>
-  <meta name="description" content="Privacy policy for ProfitPilot by Ukwebtools. Learn what data we collect, why we collect it, and your rights.">
+  <meta name="description" content="Privacy policy for ProfitPilot by UKwebtools. Learn what data we collect, why we collect it, and your rights.">
   <link rel="icon" href="https://ukwebtools.com/favicon.svg" type="image/svg+xml">
   <meta name="robots" content="index,follow">
   <link rel="canonical" href="https://profitpilot.ukwebtools.com/privacy.html">
@@ -119,7 +119,7 @@
     <div class="pp-navwrap" role="navigation" aria-label="Primary">
       <div class="pp-nav">
         <div class="pp-left">
-          <a class="pp-btn" href="https://ukwebtools.com/" rel="nofollow">← Ukwebtools</a>
+          <a class="pp-btn" href="https://ukwebtools.com/" rel="nofollow">← UKwebtools</a>
           <a class="pp-btn" href="index.html">Home</a>
           <a class="pp-btn" href="pricing.html">Pricing</a>
           <a class="pp-btn" href="reviews.html">Reviews</a>
@@ -143,7 +143,7 @@
       </div>
 
       <div class="pp-crumbs" aria-label="Breadcrumb">
-        <a href="https://ukwebtools.com/">Ukwebtools</a>
+        <a href="https://ukwebtools.com/">UKwebtools</a>
         <span class="pp-sep">›</span>
         <a href="index.html">ProfitPilot</a>
         <span class="pp-sep">›</span>
@@ -155,7 +155,7 @@
         "@context":"https://schema.org",
         "@type":"BreadcrumbList",
         "itemListElement":[
-          {"@type":"ListItem","position":1,"name":"Ukwebtools","item":"https://ukwebtools.com/"},
+          {"@type":"ListItem","position":1,"name":"UKwebtools","item":"https://ukwebtools.com/"},
           {"@type":"ListItem","position":2,"name":"ProfitPilot","item":"https://profitpilot.ukwebtools.com/index.html"},
           {"@type":"ListItem","position":3,"name":"Privacy","item":"https://profitpilot.ukwebtools.com/privacy.html"}
         ]
@@ -168,7 +168,7 @@
       <p class="meta">Last updated: <span id="d"></span></p>
 
       <p>
-        ProfitPilot is an independent tool by Ukwebtools (“we”, “us”, “our”). This policy explains what data we collect,
+        ProfitPilot is an independent tool by UKwebtools (“we”, “us”, “our”). This policy explains what data we collect,
         how we use it, and your choices.
       </p>
 
@@ -181,7 +181,7 @@
 
       <h2>Who is the data controller?</h2>
       <p>
-        Ukwebtools is the data controller for ProfitPilot. For privacy questions or requests, contact:
+        UKwebtools is the data controller for ProfitPilot. For privacy questions or requests, contact:
         <a href="mailto:support@ukwebtools.com"><b>support@ukwebtools.com</b></a>.
       </p>
 
@@ -272,7 +272,7 @@
       </p>
 
       <footer>
-        <div>© <span id="yr"></span> Ukwebtools • ProfitPilot</div>
+        <div>© <span id="yr"></span> UKwebtools • ProfitPilot</div>
         <div style="margin-top:6px">
           <a href="terms.html">Terms</a> ·
           <a href="refunds.html">Refund Policy</a> ·
