--- a/reviews.html
+++ b/reviews.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="Reviews — ProfitPilot">
   <meta property="og:description" content="Public reviews for ProfitPilot: rating average, breakdown, and latest feedback.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://profitpilot.ukwebtools.com/reviews.html">
+  <meta property="og:url" content="https://profitpilot.tools.com/reviews.html">
 
   <style>
     :root{
@@ -177,7 +177,7 @@
     "@context":"https://schema.org",
     "@type":"BreadcrumbList",
     "itemListElement":[
-      {"@type":"ListItem","position":1,"name":"Ukwebtools","item":"https://ukwebtools.com/"},
+      {"@type":"ListItem","position":1,"name":"UKwebtools","item":"https://ukwebtools.com/"},
       {"@type":"ListItem","position":2,"name":"ProfitPilot","item":"https://profitpilot.ukwebtools.com/"},
       {"@type":"ListItem","position":3,"name":"Reviews","item":"https://profitpilot.ukwebtools.com/reviews.html"}
     ]
@@ -199,7 +199,7 @@
       </div>
 
       <div class="right">
-        <a class="btn ghost" href="https://ukwebtools.com/">← Ukwebtools</a>
+        <a class="btn ghost" href="https://ukwebtools.com/">← UKwebtools</a>
         <a class="btn" href="index.html">Home</a>
         <a class="btn active" href="reviews.html">Reviews</a>
         <a class="btn" href="pricing.html">Pricing</a>
@@ -214,7 +214,7 @@
     </div>
 
     <div class="crumbs" aria-label="Breadcrumb">
-      <a href="https://ukwebtools.com/">Ukwebtools</a>
+      <a href="https://ukwebtools.com/">UKwebtools</a>
       <span class="sep">›</span>
       <a href="index.html">ProfitPilot</a>
       <span class="sep">›</span>
@@ -284,7 +284,7 @@
       <div class="hr"></div>
       <div><b>Independent tool:</b> ProfitPilot is not affiliated with or endorsed by any marketplace, platform, or payment provider.</div>
       <div><b>Estimates only:</b> outputs depend on your inputs and assumptions; no profit guarantees. Not financial/legal/tax advice.</div>
-      <div style="margin-top:6px">© <span id="yr"></span> Ukwebtools • ProfitPilot</div>
+      <div style="margin-top:6px">© <span id="yr"></span> UKwebtools • ProfitPilot</div>
     </footer>
 
   </div>
