--- a/share.html
+++ b/share.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="ProfitPilot — Shared calculation">
   <meta property="og:description" content="Open a shared ProfitPilot calculation and import it into the app.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://profitpilot.ukwebtools.com/share.html">
+  <meta property="og:url" content="https://profitpilot.tools.com/share.html">
 
   <style>
     :root{
@@ -161,7 +161,7 @@
   <div class="pp-navwrap" role="navigation" aria-label="Primary">
     <div class="pp-nav">
       <div class="pp-left">
-        <a class="pp-btn" href="https://ukwebtools.com/" data-nav="ukwebtools">← Ukwebtools</a>
+        <a class="pp-btn" href="https://ukwebtools.com/" data-nav="ukwebtools">← UKwebtools</a>
         <a class="pp-btn" href="index.html" data-nav="home">Home</a>
         <a class="pp-btn" href="app.html" data-nav="app">App</a>
         <a class="pp-btn" href="pricing.html" data-nav="pricing">Pricing</a>
@@ -180,7 +180,7 @@
     </div>
 
     <div class="pp-crumbs" aria-label="Breadcrumb">
-      <a href="https://ukwebtools.com/">Ukwebtools</a>
+      <a href="https://ukwebtools.com/">UKwebtools</a>
       <span class="pp-sep">›</span>
       <a href="index.html">ProfitPilot</a>
       <span class="pp-sep">›</span>
@@ -245,7 +245,7 @@
     <footer>
       <div><b>Independent tool:</b> Not affiliated with any marketplace/platform.</div>
       <div><b>Estimates only:</b> Outputs depend on user inputs; no guarantees. Not financial/legal/tax advice.</div>
-      <div style="margin-top:6px">© <span id="yr"></span> Ukwebtools • ProfitPilot</div>
+      <div style="margin-top:6px">© <span id="yr"></span> UKwebtools • ProfitPilot</div>
     </footer>
 
   </div>
@@ -287,7 +287,7 @@
         "@context":"https://schema.org",
         "@type":"BreadcrumbList",
         "itemListElement":[
-          {"@type":"ListItem","position":1,"name":"Ukwebtools","item":"https://ukwebtools.com/"},
+          {"@type":"ListItem","position":1,"name":"UKwebtools","item":"https://ukwebtools.com/"},
           {"@type":"ListItem","position":2,"name":"ProfitPilot","item": base + "index.html"},
           {"@type":"ListItem","position":3,"name": currentTitle, "item": base + path}
         ]
