--- a/terms.html
+++ b/terms.html
@@ -7,7 +7,7 @@ These Terms are provided by <b>Stonevia Commerce</b>, operating the ProfitPilot 
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Terms — ProfitPilot</title>
-  <meta name="description" content="Terms of use for ProfitPilot by Ukwebtools.">
+  <meta name="description" content="Terms of use for ProfitPilot by UKwebtools.">
   <link rel="icon" href="https://ukwebtools.com/favicon.svg" type="image/svg+xml">
   <meta name="robots" content="index,follow">
 
@@ -91,7 +91,7 @@ These Terms are provided by <b>Stonevia Commerce</b>, operating the ProfitPilot 
     <div class="pp-navwrap" role="navigation" aria-label="Primary">
       <div class="pp-nav">
         <div class="pp-left">
-          <a class="pp-btn" href="https://ukwebtools.com/" data-nav="ukwebtools">← Ukwebtools</a>
+          <a class="pp-btn" href="https://ukwebtools.com/" data-nav="ukwebtools">← UKwebtools</a>
           <a class="pp-btn" href="index.html" data-nav="home">Home</a>
           <a class="pp-btn" href="reviews.html" data-nav="reviews">Reviews</a>
           <a class="pp-btn" href="privacy.html" data-nav="privacy">Privacy</a>
@@ -111,7 +111,7 @@ These Terms are provided by <b>Stonevia Commerce</b>, operating the ProfitPilot 
       </div>
 
       <div class="pp-crumbs" aria-label="Breadcrumb">
-        <a href="https://ukwebtools.com/">Ukwebtools</a>
+        <a href="https://ukwebtools.com/">UKwebtools</a>
         <span class="pp-sep">›</span>
         <a href="index.html">ProfitPilot</a>
         <span class="pp-sep">›</span>
@@ -123,7 +123,7 @@ These Terms are provided by <b>Stonevia Commerce</b>, operating the ProfitPilot 
         "@context":"https://schema.org",
         "@type":"BreadcrumbList",
         "itemListElement":[
-          {"@type":"ListItem","position":1,"name":"Ukwebtools","item":"https://ukwebtools.com/"},
+          {"@type":"ListItem","position":1,"name":"UKwebtools","item":"https://ukwebtools.com/"},
           {"@type":"ListItem","position":2,"name":"ProfitPilot","item":"https://profitpilot.ukwebtools.com/index.html"},
           {"@type":"ListItem","position":3,"name":"Terms","item":"https://profitpilot.ukwebtools.com/terms.html"}
         ]
@@ -143,7 +143,7 @@ These Terms are provided by <b>Stonevia Commerce</b>, operating the ProfitPilot 
 
       <h2>2) No affiliation</h2>
       <p>
-        ProfitPilot is an independent tool by Ukwebtools. We are not affiliated with or endorsed by any marketplace, platform, or payment provider.
+        ProfitPilot is an independent tool by UKwebtools. We are not affiliated with or endorsed by any marketplace, platform, or payment provider.
       </p>
 
       <h2>3) Accounts and access</h2>
@@ -175,7 +175,7 @@ These Terms are provided by <b>Stonevia Commerce</b>, operating the ProfitPilot 
       <p>Email: <a href="mailto:support@ukwebtools.com" style="color:var(--accent);font-weight:800">support@ukwebtools.com</a></p>
 
       <footer class="fine">
-        <div>© <span id="yr"></span> Ukwebtools • ProfitPilot</div>
+        <div>© <span id="yr"></span> UKwebtools • ProfitPilot</div>
         <div><a href="privacy.html">Privacy</a> · <a href="reviews.html">Reviews</a></div>
       </footer>
     </div>
