--- a/update-password.html
+++ b/update-password.html
@@ -162,7 +162,7 @@
   <div class="pp-navwrap" role="navigation" aria-label="Primary">
     <div class="pp-nav">
       <div class="pp-left">
-        <a class="pp-btn" href="https://ukwebtools.com/" rel="nofollow">← Ukwebtools</a>
+        <a class="pp-btn" href="https://ukwebtools.com/" rel="nofollow">← UKwebtools</a>
         <a class="pp-btn" href="index.html">Home</a>
         <a class="pp-btn" href="pricing.html">Pricing</a>
         <a class="pp-btn" href="reviews.html">Reviews</a>
@@ -181,7 +181,7 @@
     </div>
 
     <div class="pp-crumbs" aria-label="Breadcrumb">
-      <a href="https://ukwebtools.com/">Ukwebtools</a>
+      <a href="https://ukwebtools.com/">UKwebtools</a>
       <span class="pp-sep">›</span>
       <a href="index.html">ProfitPilot</a>
       <span class="pp-sep">›</span>
