--- a/app.html
+++ b/app.html
@@ -2,6 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
+  <!-- Google Analytics (GA4) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F12747YWBN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-F12747YWBN', {
+    anonymize_ip: true
+  });
+</script>
+
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>ProfitPilot — App</title>
   <meta name="description" content="ProfitPilot: profit calculator with reverse pricing, bulk table, insights, competitor mode, export, share and saved presets.">
