--- a/pricing.html
+++ b/pricing.html
@@ -3,6 +3,18 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <!-- Google Analytics (GA4) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F12747YWBN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-F12747YWBN', {
+    anonymize_ip: true
+  });
+</script>
+
 
   <title>Pricing — ProfitPilot</title>
   <meta name="description" content="ProfitPilot pricing: 5-day trial, one-time PRO unlock, and PRO+ for power sellers. Compare features and limits.">
